--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
   <h1>Chuck Norris Jokes</h1>
   <button id="fetchJoke">Obtener Chiste</button>
-  <ul id="jokeList"></ul>
+  <ul id="jokeList">
+    
+  </ul>
 
   <script src="./js/script.js"></script>
 </body>
